[package]
name = "inoutflow-bsc"
version = "0.2.1"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "Command line program to calculate in/out flow of BNB for target address (either wallet or contract)"
license = "MIT"
keywords = ["blockchain", "crypto", "bsc", "binance", "BNB"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/haxpor/inoutflow-bsc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
primitive-types = { version = "0.11.1", features = ["impl-serde", "fp-conversion"] }
